window: ensure that ALL_WORKSPACES has the X11 expected value

And cast it explicitly so that we mute warnings

https://bugzilla.gnome.org/show_bug.cgi?id=785451